--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
     <header>
         <h1>Minha Lista de Tarefas</h1>
+        <p id='funcionamento'>
+            lique duas vezes em um item para marcá-lo como completo
+        </p>
     </header>
 </body>
 </html>
