--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
             lique duas vezes em um item para marcá-lo como completo
         </p>
     </header>
+    <main>
+        <input type="text" id="texto-tarefa">
+    </main>
 </body>
 </html>
