--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 	</header>
 	<main>
 		<input type='text' id='texto-tarefa'>
+		<button id='criar-tarefa'>Criar</button>
 		<ol id='lista-tarefas'></ol>
 	</main>
+	<script src='script.js'></script>
 </body>
 
 </html>
