--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <input type='text' id='texto-tarefa'>
     <button id='criar-tarefa'>Criar</button>
     <ol id='lista-tarefas'></ol>
-    <button id='apaga-tudo'>Apagar Tudo</button>
+    <div id='botoes-apagar'>
+      <button id='apaga-tudo'>Apagar Tudo</button>
+      <button id='remover-finalizados'>Apagar Finalizados</button>
+    </div>
   </main>
   <script src='script.js'></script>
 </body>
