implementa requisito 12: slvar alterações em localStorage

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <input type='text' id='texto-tarefa'>
     <button id='criar-tarefa'>Criar</button>
     <ol id='lista-tarefas'></ol>
-    <div id='botoes-apagar'>
+    <div id='botoes-controle'>
       <button id='apaga-tudo'>Apagar Tudo</button>
       <button id='remover-finalizados'>Apagar Finalizados</button>
+      <button id='salvar-tarefas'>Salvar Tarefas</button>
     </div>
   </main>
   <script src='script.js'></script>
