implementa requisito 13: adiciona botão para baixo funcional

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <button id='apaga-tudo'>Apagar Tudo</button>
       <button id='remover-finalizados'>Apagar Finalizados</button>
       <button id='salvar-tarefas'>Salvar Tarefas</button>
+      <button id='mover-cima'>Mover p/ Cima</button>
+      <button id='mover-baixo'>Mover p/ Baixo</button>
     </div>
   </main>
   <script src='script.js'></script>
