implementa requisito 14: adiciona botão funcional para remover tarefa selecionada

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <button id='salvar-tarefas'>Salvar Tarefas</button>
       <button id='mover-cima'>Mover p/ Cima</button>
       <button id='mover-baixo'>Mover p/ Baixo</button>
+      <button id='remover-selecionado'>Remover Tarefa Selecionada</button>
     </div>
   </main>
   <script src='script.js'></script>
